Actualización de tab Productos, se agregó librería ng-multiselect-dropdown

--- a/src/app/Components/Modals/create-insumo/create-insumo.component.html
+++ b/src/app/Components/Modals/create-insumo/create-insumo.component.html
@@ -14,7 +14,7 @@
         <ion-col class="inputTitle">
           Nombre:
         </ion-col>
-        <ion-col>
+        <ion-col size="7.1">
           <input type="text" class="input">
         </ion-col>
       </ion-row>
@@ -22,7 +22,7 @@
         <ion-col class="inputTitle">
           Cantidad existente:
         </ion-col>
-        <ion-col>
+        <ion-col size="7.1">
           <input type="number" class="input">
         </ion-col>
       </ion-row>
@@ -30,7 +30,7 @@
         <ion-col class="inputTitle">
           Unidad de medida:
         </ion-col>
-        <ion-col>
+        <ion-col size="7.1">
           <input type="text" class="input">
         </ion-col>
       </ion-row>
