--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -14,31 +14,41 @@
   </ion-header>
 
   <app-explore-container name="Tab 2 page"></app-explore-container> -->
-  <ion-card class="ion-activatable ripple-parent">
-    <ion-ripple-effect></ion-ripple-effect>
+
+  <ion-card>
     <ion-card-header>
-      <ion-card-title>Bebidas</ion-card-title>
+      <ion-card-title>Vender</ion-card-title>
     </ion-card-header>
+
+    <ion-searchbar placeholder="Buscar"></ion-searchbar>
+
+    <ion-card class="ion-activatable ripple-parent">
+      <ion-ripple-effect></ion-ripple-effect>
+      <ion-card-header>
+        <ion-card-title>Bebidas</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        <div class="cardDiv">
+          <ion-icon name="cafe-outline" class="beveragesIcon"></ion-icon>
+        </div>
+      </ion-card-content>
+    </ion-card>
   
-    <ion-card-content>
-      <div class="cardDiv">
-        <ion-icon name="cafe-outline" class="beveragesIcon"></ion-icon>
-      </div>
-    </ion-card-content>
+    <ion-card class="ion-activatable ripple-parent">
+      <ion-ripple-effect></ion-ripple-effect>
+      <ion-card-header>
+        <ion-card-title>Comida</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        <div class="cardDiv">
+          <ion-icon name="fast-food-outline" class="beveragesIcon"></ion-icon>
+        </div>
+      </ion-card-content>
+    </ion-card>
   </ion-card>
 
-  <ion-card class="ion-activatable ripple-parent">
-    <ion-ripple-effect></ion-ripple-effect>
-    <ion-card-header>
-      <ion-card-title>Comida</ion-card-title>
-    </ion-card-header>
-  
-    <ion-card-content>
-      <div class="cardDiv">
-        <ion-icon name="fast-food-outline" class="beveragesIcon"></ion-icon>
-      </div>
-    </ion-card-content>
-  </ion-card>
 
   <ion-card class="ion-activatable ripple-parent">
     <ion-ripple-effect></ion-ripple-effect>
