--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -6,3 +6,11 @@
     align-items: center;
     font-size: 15px;
 }
+.productsIcon{
+    border: 1px solid gray; 
+    padding: 4px; 
+    border-radius: 5px;
+}
+.listTitle{
+    font-size: 20px;
+}
