--- a/src/global.scss
+++ b/src/global.scss
@@ -29,3 +29,8 @@
 .popInsumoDetail{
     --width: 90%;
 }
+.modalDetailInsumo{
+    --height: 40%;
+    --width: 85%;
+    --border-radius: 10px;
+}
