--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -9,14 +9,11 @@
 .listTitle{
     font-size: 20px;
 }
+.productsIcon{
+    border: 1px solid gray; 
+    padding: 4px; 
+    border-radius: 5px;
+}
 .divTableView{
     padding: 3px;
-}
-.viewTableRow{
-    display: flex;
-    justify-content: center;
-}
-.viewTableButton{
-    text-transform: none;
-    font-size: 11px;
 }
