--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -21,4 +21,35 @@
     </ion-card-content>
   </ion-card>
 
+  <ion-card class="ion-activatable ripple-parent">
+    <ion-item lines="none">
+      <ion-label class="listTitle">Lista de Productos</ion-label>
+      <ion-icon name="eye-outline" class="productsIcon" (click)="presentModalTable($event)"></ion-icon>&nbsp;&nbsp;
+      <ion-icon name="download-outline" class="productsIcon" (click)="presentAlert()"></ion-icon>
+    </ion-item>
+
+    <ion-searchbar placeholder="Buscar"></ion-searchbar>
+  
+    <ion-list>
+      <ion-item button>
+        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+        <ion-label>Capuccino</ion-label>
+        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+      </ion-item>
+  
+      <ion-item button>
+        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+        <ion-label>Capuccino</ion-label>
+        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+      </ion-item>
+  
+      <ion-item button>
+        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+        <ion-label>Capuccino</ion-label>
+        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+      </ion-item>
+  
+    </ion-list>
+  </ion-card>
+
 </ion-content>
