Generación de apk con capacitor y androind studio, agregación de componentes faltantes

--- a/src/app/Components/Modals/create-insumo/create-insumo.component.html
+++ b/src/app/Components/Modals/create-insumo/create-insumo.component.html
@@ -34,6 +34,9 @@
           <input type="text" class="input">
         </ion-col>
       </ion-row>
+      <ion-row class="buttonRow">
+        <ion-button class="saveButton">Guardar</ion-button>
+      </ion-row>
     </ion-grid>
   </ion-card>
 </ion-content>
