--- a/src/app/Components/Modals/create-insumo/create-insumo.component.scss
+++ b/src/app/Components/Modals/create-insumo/create-insumo.component.scss
@@ -18,3 +18,12 @@
 .input{
     height: 30px;
 }
+.buttonRow{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+.saveButton{
+    text-transform: none;
+}
