--- a/src/app/Components/Modals/insumos-table/insumos-table.component.html
+++ b/src/app/Components/Modals/insumos-table/insumos-table.component.html
@@ -16,34 +16,39 @@
       <th>Unidad de medida</th>
     </tr>
     <tr>
-      <td>Alfreds Futterkiste</td>
-      <td>Maria Anders</td>
-      <td>Germany</td>
+      <td>Café</td>
+      <td>50</td>
+      <td>Libras</td>
     </tr>
     <tr>
-      <td>Centro comercial Moctezuma</td>
-      <td>Francisco Chang</td>
-      <td>Mexico</td>
+      <td>Leche</td>
+      <td>55</td>
+      <td>Libras</td>
     </tr>
     <tr>
-      <td>Ernst Handel</td>
-      <td>Roland Mendel</td>
-      <td>Austria</td>
+      <td>Leche espumada</td>
+      <td>60</td>
+      <td>Libras</td>
     </tr>
     <tr>
-      <td>Island Trading</td>
-      <td>Helen Bennett</td>
-      <td>UK</td>
+      <td>Espresso</td>
+      <td>50</td>
+      <td>Libras</td>
     </tr>
     <tr>
-      <td>Laughing Bacchus Winecellars</td>
-      <td>Yoshi Tannamuri</td>
-      <td>Canada</td>
+      <td>Chai</td>
+      <td>50</td>
+      <td>Libras</td>
     </tr>
     <tr>
-      <td>Magazzini Alimentari Riuniti</td>
-      <td>Giovanni Rovelli</td>
-      <td>Italy</td>
+      <td>Azucar</td>
+      <td>50</td>
+      <td>Libras</td>
+    </tr>
+    <tr>
+      <td>Jarabe</td>
+      <td>50</td>
+      <td>Libras</td>
     </tr>
   </table>
   
