--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -15,42 +15,75 @@
 
   <app-explore-container name="Tab 2 page"></app-explore-container> -->
 
-  <ion-card>
+  <ion-card class="salesCard">
     <ion-card-header>
       <ion-card-title>Vender</ion-card-title>
     </ion-card-header>
 
-    <ion-searchbar placeholder="Buscar"></ion-searchbar>
+    <ion-row class="buttonsRow">
+      <ion-button color="none" class="categoryButton">
+        Bebidas
+        <ion-icon name="cafe-outline" slot="end"></ion-icon>
+      </ion-button>&nbsp;
+      <ion-button color="none" class="categoryButton">
+        Comida
+        <ion-icon name="fast-food-outline" slot="end"></ion-icon>
+      </ion-button>
+    </ion-row>
 
-    <ion-card class="ion-activatable ripple-parent">
-      <ion-ripple-effect></ion-ripple-effect>
-      <ion-card-header>
-        <ion-card-title>Bebidas</ion-card-title>
-      </ion-card-header>
+    <ion-searchbar placeholder="Buscar producto"></ion-searchbar>
+
+    <div class="listDiv">
+      <ion-list >
+        <ion-item button (click)="presentModalProductSale()">
+          <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+          <ion-label>Latte</ion-label>
+          <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+        </ion-item>
     
-      <ion-card-content>
-        <div class="cardDiv">
-          <ion-icon name="cafe-outline" class="beveragesIcon"></ion-icon>
-        </div>
-      </ion-card-content>
-    </ion-card>
-  
-    <ion-card class="ion-activatable ripple-parent">
-      <ion-ripple-effect></ion-ripple-effect>
-      <ion-card-header>
-        <ion-card-title>Comida</ion-card-title>
-      </ion-card-header>
+        <ion-item button (click)="presentModalProductSale()">
+          <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+          <ion-label>Capuccino</ion-label>
+          <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+        </ion-item>
     
-      <ion-card-content>
-        <div class="cardDiv">
-          <ion-icon name="fast-food-outline" class="beveragesIcon"></ion-icon>
-        </div>
-      </ion-card-content>
-    </ion-card>
+        <ion-item button (click)="presentModalProductSale()">
+          <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+          <ion-label>Latte y Capu Saborizado</ion-label>
+          <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+        </ion-item>
+    
+        <ion-item button (click)="presentModalProductSale()">
+          <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+          <ion-label>Flat White</ion-label>
+          <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+        </ion-item>
+    
+        <ion-item button (click)="presentModalProductSale()">
+          <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+          <ion-label>Mocca</ion-label>
+          <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+        </ion-item>
+    
+        <ion-item button (click)="presentModalProductSale()">
+          <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+          <ion-label>Café Negro</ion-label>
+          <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+        </ion-item>
+    
+        <ion-item button (click)="presentModalProductSale()">
+          <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+          <ion-label>Café con leche</ion-label>
+          <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+        </ion-item>
+      </ion-list>
+    </div>
+    
+
   </ion-card>
 
 
-  <ion-card class="ion-activatable ripple-parent">
+  <ion-card class="ion-activatable ripple-parent" (click)="presentModal()">
     <ion-ripple-effect></ion-ripple-effect>
     <ion-card-header>
       <ion-card-title>Historial de ventas</ion-card-title>
