--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -31,24 +31,47 @@
     <ion-searchbar placeholder="Buscar"></ion-searchbar>
   
     <ion-list>
-      <ion-item button>
+      <ion-item button (click)="presentModalProductDetail()">
         <ion-icon name="list-circle-outline" slot="start"></ion-icon>
-        <ion-label>Capuccino</ion-label>
-        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+        <ion-label>Latte</ion-label>
+        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
       </ion-item>
   
       <ion-item button>
         <ion-icon name="list-circle-outline" slot="start"></ion-icon>
         <ion-label>Capuccino</ion-label>
-        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
       </ion-item>
   
       <ion-item button>
         <ion-icon name="list-circle-outline" slot="start"></ion-icon>
-        <ion-label>Capuccino</ion-label>
-        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+        <ion-label>Latte y Capu Saborizado</ion-label>
+        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
       </ion-item>
   
+      <ion-item button>
+        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+        <ion-label>Flat White</ion-label>
+        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+      </ion-item>
+  
+      <ion-item button>
+        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+        <ion-label>Mocca</ion-label>
+        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+      </ion-item>
+  
+      <ion-item button>
+        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+        <ion-label>Café Negro</ion-label>
+        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+      </ion-item>
+  
+      <ion-item button>
+        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+        <ion-label>Café con leche</ion-label>
+        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
+      </ion-item>
     </ion-list>
   </ion-card>
 
