--- a/src/global.scss
+++ b/src/global.scss
@@ -34,3 +34,13 @@
     --width: 85%;
     --border-radius: 10px;
 }
+.productSaleModal{
+    --height: 45%;
+    --width: 85%;
+    --border-radius: 10px;
+}
+.productDetailModal{
+    --height: 45%;
+    --width: 85%;
+    --border-radius: 10px;
+}
