--- a/src/app/Components/Modals/products-table/products-table.component.html
+++ b/src/app/Components/Modals/products-table/products-table.component.html
@@ -12,36 +12,41 @@
   <table>
     <tr>
       <th>Nombre</th>
-      <th>Cantidad</th>
-      <th>Unidad de medida</th>
+      <th>Categoría</th>
+      <th>Precio</th>
     </tr>
     <tr>
-      <td>Alfreds Futterkiste</td>
-      <td>Maria Anders</td>
+      <td>Latte</td>
+      <td></td>
       <td>Germany</td>
     </tr>
     <tr>
-      <td>Centro comercial Moctezuma</td>
+      <td>Capuccino</td>
       <td>Francisco Chang</td>
       <td>Mexico</td>
     </tr>
     <tr>
-      <td>Ernst Handel</td>
+      <td>Late y Capu Saborizado</td>
       <td>Roland Mendel</td>
       <td>Austria</td>
     </tr>
     <tr>
-      <td>Island Trading</td>
+      <td>Flat White</td>
       <td>Helen Bennett</td>
       <td>UK</td>
     </tr>
     <tr>
-      <td>Laughing Bacchus Winecellars</td>
+      <td>Mocca</td>
       <td>Yoshi Tannamuri</td>
       <td>Canada</td>
     </tr>
     <tr>
-      <td>Magazzini Alimentari Riuniti</td>
+      <td>Café Negro</td>
+      <td>Giovanni Rovelli</td>
+      <td>Italy</td>
+    </tr>
+    <tr>
+      <td>Café con leche</td>
       <td>Giovanni Rovelli</td>
       <td>Italy</td>
     </tr>
