--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -20,3 +20,8 @@
 .detailLabel{
     font-size: 13px;
 }
+.withoutData{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
