--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -30,49 +30,20 @@
 
     <ion-searchbar placeholder="Buscar"></ion-searchbar>
   
-    <ion-list>
-      <ion-item button (click)="presentModalProductDetail()">
+    <ion-list *ngIf="status == 'with data'">
+      <ion-item button (click)="getProductData(item); presentModalProductDetail()" *ngFor="let item of products">
         <ion-icon name="list-circle-outline" slot="start"></ion-icon>
-        <ion-label>Latte</ion-label>
-        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
-      </ion-item>
-  
-      <ion-item button>
-        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
-        <ion-label>Capuccino</ion-label>
-        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
-      </ion-item>
-  
-      <ion-item button>
-        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
-        <ion-label>Latte y Capu Saborizado</ion-label>
-        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
-      </ion-item>
-  
-      <ion-item button>
-        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
-        <ion-label>Flat White</ion-label>
-        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
-      </ion-item>
-  
-      <ion-item button>
-        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
-        <ion-label>Mocca</ion-label>
-        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
-      </ion-item>
-  
-      <ion-item button>
-        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
-        <ion-label>Café Negro</ion-label>
-        <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
-      </ion-item>
-  
-      <ion-item button>
-        <ion-icon name="list-circle-outline" slot="start"></ion-icon>
-        <ion-label>Café con leche</ion-label>
+        <ion-label>{{item.name}}</ion-label>
         <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
       </ion-item>
     </ion-list>
+    <ion-list *ngIf="status == 'without data'" class="withoutData">
+      No hay productos registrados.
+    </ion-list>
+    <ion-list *ngIf="status == waiting">
+      <ion-progress-bar type="indeterminate"></ion-progress-bar>
+    </ion-list>
   </ion-card>
+  
 
 </ion-content>
