--- a/src/app/Components/Modals/edit-product/edit-product.component.html
+++ b/src/app/Components/Modals/edit-product/edit-product.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title class="title">
-      Crear Producto
+      Editar Producto
     </ion-title>
     <ion-icon name="close-circle-outline" slot="end" class="closeIcon" (click)="dismissModal()"></ion-icon>
   </ion-toolbar>
@@ -10,14 +10,6 @@
 <ion-content [fullscreen]="true">
   <ion-card class="card">
     <ion-grid class="formGrid">
-
-      <!-- <ion-row class="cameraRow">
-        <ion-col class="cameraCol">
-          <div class="cameraDiv">
-            <ion-icon name="camera-outline" class="cameraIcon"></ion-icon>
-          </div>
-        </ion-col>
-      </ion-row> -->
 
       <ion-row class="formRow">
         <ion-col class="inputTitle">
