--- a/src/app/Components/Modals/sales-history/sales-history.component.html
+++ b/src/app/Components/Modals/sales-history/sales-history.component.html
@@ -23,23 +23,12 @@
       <th>Cantidad</th>
       <th>Precio</th>
     </tr>
-    <tr>
-      <td>{{date}}</td>
-      <td>Latte y Capu Saborizado</td>
-      <td>3</td>
-      <td>Q&nbsp;72.00</td>
+    <tr *ngFor="let item of ventas">
+      <td>{{item.date}}</td>
+      <td>{{item.product}}</td>
+      <td>{{item.quantity}}</td>
+      <td>Q&nbsp;{{(item.price).toFixed(2)}}</td>
     </tr>
-    <tr>
-      <td>{{date}}</td>
-      <td>Capuccino</td>
-      <td>2</td>
-      <td>Q&nbsp;36.00</td>
-    </tr>
-    <tr>
-      <td>{{date}}</td>
-      <td>Latte</td>
-      <td>1</td>
-      <td>Q&nbsp;18.00</td>
-    </tr>
+
   </table>
 </ion-content>
