--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -28,3 +28,11 @@
     overflow-y: auto;
     padding: 0 0 20px 0;
 }
+.empty{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.progressBar{
+    margin-top: 15px;
+}
